# florisboard

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  AGENTS.md  AI_POLICY.md  BUILD_INSTRUCTIONS.md  CODE_ANALYSIS_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DEVLOG.md  Dockerfile  GEMINI.md  GITHUB_DEPLOYMENT.md  IME_CRITICAL_FIXES.md  LANGUAGEPACKS-CHINESE.md  LANGUAGEPACKS.md  LANGUAGE_OPTIMIZATION.md  PHASE2_COMPLETE.md  PHASE2_QUICKREF.md  PHASE2_SUMMARY.md  PHASE2_TESTING.md  PHASE3_AI_INTEGRATION.md  PR_SUMMARY.md  README.md  README_PHASE2.md  ROADMAP.md  ZIPRAF_OMEGA_BUG_ANALYSIS.md  ZIPRAF_OMEGA_CI_CD_CHECKLIST.md  ZIPRAF_OMEGA_FINAL_REPORT.md  ZIPRAF_OMEGA_SUMMARY.md  assemble_log.txt  build.gradle  build.gradle.kts  build_errors.txt  build_help.txt  build_log.txt  build_log_2.txt  build_log_3.txt  (+20 more)
app/src/main/cpp/: .clang-format  .clang-tidy  .editorconfig  CMakeLists.txt  FlorisApplication.cpp  LatinLanguageProvider.cpp  LatinLanguageProviderService.cpp  LatinNlpSession.cpp  dev_patrickgold_florisboard_FlorisApplication.cpp  dev_patrickgold_florisboard_ime_nlp_SuggestionList.cpp  dev_patrickgold_florisboard_ime_nlp_latin_LatinNlpSession.cpp  dev_patrickgold_florisboard_ime_spelling_SpellingDict.cpp  native-lib.cpp
app/src/main/cpp/glob_ndk/: CMakeLists.txt  glob_ndk.c  glob_ndk.h
app/src/main/cpp/icu4c/: build_icu.sh  data-feature-filter.json  floris-cc-icu4c.sh  floris_build_icu4c.sh
app/src/main/cpp/icu4c/icu/: APIChangeReport.html  readme.html
app/src/main/cpp/ime/nlp/: CMakeLists.txt  nlp.h  staged_suggestion_list.cpp  staged_suggestion_list.h  suggestion_list.cpp  suggestion_list.h  token.cpp  token.h
app/src/main/cpp/ime/spelling/: CMakeLists.txt  spellingdict.cpp  spellingdict.h
app/src/main/cpp/nuspell/: CMakeLists.txt  aff_data.cxx  aff_data.hxx  checker.cxx  checker.hxx  clang-format.sh  dictionary.cxx  dictionary.hxx  finder.cxx  finder.hxx  main.cxx  nuspell_export.h  structures.hxx  suggester.cxx  suggester.hxx  unicode.hxx  utils.cxx  utils.hxx
app/src/main/cpp/utils/: CMakeLists.txt  jni_exception.cpp  jni_exception.h  jni_utils.cpp  jni_utils.h  log.cpp  log.h
lib/native/src/main/rust/: CMakeLists.txt  Cargo.toml
lib/native/src/main/rust/.cargo/: config.toml
lib/native/src/main/rust/src/: lib.c  lib.rs
libnative/latinime/: Android.bp  CMakeLists.txt  README.md  com_android_inputmethod_keyboard_ProximityInfo.cpp  com_android_inputmethod_keyboard_ProximityInfo.h  com_android_inputmethod_latin_BinaryDictionary.cpp  com_android_inputmethod_latin_BinaryDictionary.h  com_android_inputmethod_latin_BinaryDictionaryUtils.cpp  com_android_inputmethod_latin_BinaryDictionaryUtils.h  com_android_inputmethod_latin_DicTraverseSession.cpp  com_android_inputmethod_latin_DicTraverseSession.h  jni_common.cpp  jni_common.h  run-tests.sh
libnative/latinime/src/: defines.h
libnative/latinime/src/dictionary/header/: header_policy.cpp  header_policy.h  header_read_write_utils.cpp  header_read_write_utils.h
libnative/latinime/src/dictionary/interface/: dictionary_bigrams_structure_policy.h  dictionary_header_structure_policy.h  dictionary_shortcuts_structure_policy.h  dictionary_structure_with_buffer_policy.h  ngram_listener.h
libnative/latinime/src/dictionary/property/: historical_info.h  ngram_context.cpp  ngram_context.h  ngram_property.h  unigram_property.h  word_attributes.h  word_property.h
libnative/latinime/src/dictionary/structure/: dictionary_structure_with_buffer_policy_factory.cpp  dictionary_structure_with_buffer_policy_factory.h
libnative/latinime/src/dictionary/structure/pt_common/: dynamic_pt_gc_event_listeners.cpp  dynamic_pt_gc_event_listeners.h  dynamic_pt_reading_helper.cpp  dynamic_pt_reading_helper.h  dynamic_pt_reading_utils.cpp  dynamic_pt_reading_utils.h  dynamic_pt_updating_helper.cpp  dynamic_pt_updating_helper.h  dynamic_pt_writing_utils.cpp  dynamic_pt_writing_utils.h  patricia_trie_reading_utils.cpp  patricia_trie_reading_utils.h  pt_node_array_reader.h  pt_node_params.h  pt_node_reader.h  pt_node_writer.h
libnative/latinime/src/dictionary/structure/v2/: patricia_trie_policy.cpp  patricia_trie_policy.h  ver2_patricia_trie_node_reader.cpp  ver2_patricia_trie_node_reader.h  ver2_pt_node_array_reader.cpp  ver2_pt_node_array_reader.h
libnative/latinime/src/dictionary/structure/v4/: ver4_dict_buffers.h  (+15 more)
libnative/latinime/src/dictionary/utils/: binary_dictionary_bigrams_iterator.h  binary_dictionary_shortcut_iterator.h  bloom_filter.h  buffer_with_extendable_buffer.cpp  buffer_with_extendable_buffer.h  byte_array_utils.cpp  byte_array_utils.h  dict_file_writing_utils.cpp  dict_file_writing_utils.h  entry_counters.h  file_utils.cpp  file_utils.h  forgetting_curve_utils.cpp  forgetting_curve_utils.h  format_utils.cpp  format_utils.h  mmapped_buffer.cpp  mmapped_buffer.h  multi_bigram_map.cpp  multi_bigram_map.h  probability_utils.cpp  probability_utils.h  sparse_table.cpp  sparse_table.h  trie_map.cpp  trie_map.h
libnative/latinime/src/suggest/core/: suggest.cpp  suggest.h  suggest_interface.h  suggest_options.h
libnative/latinime/src/utils/: autocorrection_threshold_utils.cpp  autocorrection_threshold_utils.h  byte_array_view.h  char_utils.cpp  char_utils.h  int_array_view.h  jni_data_utils.cpp  jni_data_utils.h  log_utils.cpp  log_utils.h  ngram_utils.h  profiler.h  time_keeper.cpp  time_keeper.h
libnative/latinime/tests/: defines_test.cpp
libnative/latinime/tests/dictionary/header/: header_read_write_utils_test.cpp
libnative/latinime/tests/dictionary/utils/: bloom_filter_test.cpp  buffer_with_extendable_buffer_test.cpp  byte_array_utils_test.cpp  format_utils_test.cpp  probability_utils_test.cpp  sparse_table_test.cpp  trie_map_test.cpp
libnative/latinime/tests/utils/: autocorrection_threshold_utils_test.cpp  char_utils_test.cpp  int_array_view_test.cpp  time_keeper_test.cpp
libnative/textutils/: Cargo.toml
libnative/textutils/src/: filter.rs  fuzzy.rs  lib.rs  normalization.rs  properties.rs  segment.rs
utils/flesttools/: Cargo.toml
utils/flesttools/src/: main.rs
(+3244 files in other folders)
