add_library(
        # Name
        ime-spelling-hunspell

        # Headers
        affentry.hxx
        affixmgr.hxx
        atypes.hxx
        baseaffix.hxx
        csutil.hxx
        filemgr.hxx
        hashmgr.hxx
        htypes.hxx
        hunspell.h
        hunspell.hxx
        hunvisapi.h
        hunvisapi.h.in
        hunzip.hxx
        langnum.hxx
        phonet.hxx
        replist.hxx
        suggestmgr.hxx
        utf_info.hxx
        w_char.hxx

        # Sources
        affentry.cxx
        affixmgr.cxx
        csutil.cxx
        filemgr.cxx
        hashmgr.cxx
        hunspell.cxx
        hunzip.cxx
        phonet.cxx
        replist.cxx
        suggestmgr.cxx
)
